# NYCTaxiWeather-ETL-Lakehouse-PySpark

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: architecture.md  data_sources.md  interview_talking_points.md  one_page_cheatsheet.md  run_evidence.md
notebooks/: example_run_walkthrough.ipynb
scripts/: bronze_tlc.py  bronze_weather.py  gold_daily_metrics.py  inspect_outputs.py  run_all.py  run_quality.py  silver_enriched.py  silver_trips.py  silver_weather.py  spark-submit.sh
src/mobility_lakehouse/: config.py
src/mobility_lakehouse/pipelines/: bronze_tlc.py  bronze_weather.py  gold_daily_metrics.py  run_all.py  silver_enriched.py  silver_trips.py  silver_weather.py
src/mobility_lakehouse/quality/: checks.py
src/mobility_lakehouse/utils/: logging.py  paths.py  spark.py
tests/: conftest.py  test_bronze_tlc.py  test_bronze_weather.py  test_spark_transforms.py
